# project_template

./: .gitignore  Makefile  README.md  setup.cfg
dockerfiles/: .dockerignore  Dockerfile_for_ci  Dockerfile_for_packaging
project_name/: __main__.py
tests/: test_main_.py
