[metadata]
name = project_name
version = attr: project_name.__version__
author = leo babonnaud
author_email =
home_page =
license =
description = un template pour tous les projets python
url =
platform = any
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers, DataScientists, MLEngineers
    Operating System :: OS Independent
project_urls =
    Bug Tracker = https://gitlab.com/skool-data-fy22/dojo-2/issues

[options]
zip_safe = false
packages = find:
test_suite=tests
install_requires =

include_package_data = True
python_requires = >=3.10

[options.extras_require]
dev =
    build==0.7.0
    twine==3.7.1
    setuptools==60.6.0
    wheel==0.37.1
    setuptools-scm==6.4.2
    flake8==4.0.1
    flake8-html==0.4.1
    lxml==4.7.1
    mypy==0.931
    pylama[all]==8.3.7
    pytest-cov==3.0.0
    pytest-html==3.1.1
    pytest==6.2.5
    bandit==1.7.2
    safety==1.10.3

[options.entry_points]
console_scripts =
    hello-template = project_name.__main__:main

[options.packages.find]
exclude =
    tests